# moneymate-scraper

./: .env.example  .gitignore  pyproject.toml
src/moneymate_scraper/: __init__.py  config.py  main.py
src/moneymate_scraper/models/: __init__.py  transaction.py
src/moneymate_scraper/services/: __init__.py  gmail_client.py  receipt_parser.py
tests/: test_config.py
