[project]
name = "moneymate-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Bima Dewantoro",email = "bimadewantoro22@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "libsql-client (>=0.3.1,<0.4.0)",
    "imap-tools (>=1.11.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
